objects/ProductLicense__c.object
<CustomObject>
    <description>SFDC1-7972 License object is used to hold the details about the license and any additional parameters to get access to Documents and Solutions in Customer Portal.</description>
    <fields>
        <fullName>ClientID__c</fullName>
        <description>SFDC1-4382 Client ID (e.g. desktop, rtd, mdw and ufe) is the Id of the system in UserXS from where the product is accessed)</description>
        <inlineHelpText>Client ID is the Id of the system in UserXS from where the product is accessed</inlineHelpText>
        <label>Client ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>desktop</fullName>
                </value>
                <value>
                    <fullName>mca</fullName>
                </value>
                <value>
                    <fullName>mdw</fullName>
                </value>
                <value>
                    <fullName>rtd</fullName>
                </value>
                <value>
                    <fullName>ufe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContentWorkspace__c</fullName>
        <description>SFDC1-4382 Library name associated to this License.</description>
        <inlineHelpText>Select the Library name associated to this License.</inlineHelpText>
        <label>Content Workspace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Counterparty Manager</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Dividend Forecasting</fullName>
                </value>
                <value>
                    <fullName>ETP Data</fullName>
                </value>
                <value>
                    <fullName>Excel Add-In</fullName>
                </value>
                <value>
                    <fullName>Goldfire</fullName>
                </value>
                <value>
                    <fullName>Index Administration Services – HSBC</fullName>
                </value>
                <value>
                    <fullName>Index Administration Services – LGIM</fullName>
                </value>
                <value>
                    <fullName>Index Administration Services – UBS</fullName>
                </value>
                <value>
                    <fullName>Kingdom</fullName>
                </value>
                <value>
                    <fullName>MarkitSERV</fullName>
                </value>
                <value>
                    <fullName>Markit WSO</fullName>
                </value>
                <value>
                    <fullName>Markit WSO Installation Guides</fullName>
                </value>
                <value>
                    <fullName>Markit WSO Release Notes</fullName>
                </value>
                <value>
                    <fullName>Markit WSO User Manuals</fullName>
                </value>
                <value>
                    <fullName>Markit WSO White Papers</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>Parsing</fullName>
                </value>
                <value>
                    <fullName>PMI</fullName>
                </value>
                <value>
                    <fullName>Pricing Data - CDS</fullName>
                </value>
                <value>
                    <fullName>Pricing Data - Loans</fullName>
                </value>
                <value>
                    <fullName>Reference Data - CDS</fullName>
                </value>
                <value>
                    <fullName>Registry</fullName>
                </value>
                <value>
                    <fullName>Research Signals</fullName>
                </value>
                <value>
                    <fullName>Securitised Products</fullName>
                </value>
                <value>
                    <fullName>Securitised Products Viewer</fullName>
                </value>
                <value>
                    <fullName>Submission Manager</fullName>
                </value>
                <value>
                    <fullName>Totem</fullName>
                </value>
                <value>
                    <fullName>Valuations Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>SFDC1-6785 End date of the validity of the license</description>
        <inlineHelpText>The last date this license is valid until,  this can be in the future</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalSystemLicenceName__c</fullName>
        <description>SFDC1-6785 External system license name</description>
        <externalId>true</externalId>
        <inlineHelpText>External system license name</inlineHelpText>
        <label>External System Licence Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsVisibleInCustomerPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6785 Is used on customer portal if the License is visible</description>
        <inlineHelpText>Set if this license need to be visible in Customer Portal</inlineHelpText>
        <label>IsVisibleInCustomerPortal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6785: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDLicense__c</fullName>
        <description>SFDC1-6785 PKID is used for data migration support from the legacy system</description>
        <displayFormat>Lic{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>PKID is used for data migration support from the legacy system and is auto-generated</inlineHelpText>
        <label>PKID License</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SolutionCategory__c</fullName>
        <description>SFDC1-6785 Solution category to which this license is associated with. Anybody with this license gets access to the solutions in this solution category</description>
        <inlineHelpText>Solution category to which this license is associated with.Anybody with this license gets access to the solutions in this solution category in the customer portal.</inlineHelpText>
        <label>Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Counterparty Manager</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Dividend Forecasting</fullName>
                </value>
                <value>
                    <fullName>Excel Add-In</fullName>
                </value>
                <value>
                    <fullName>Goldfire</fullName>
                </value>
                <value>
                    <fullName>Kingdom</fullName>
                </value>
                <value>
                    <fullName>MarkitSERV</fullName>
                </value>
                <value>
                    <fullName>Markit WSO</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>Parsing</fullName>
                </value>
                <value>
                    <fullName>PMI</fullName>
                </value>
                <value>
                    <fullName>Pricing Data - CDS</fullName>
                </value>
                <value>
                    <fullName>Pricing Data - Loans</fullName>
                </value>
                <value>
                    <fullName>Reference Data - CDS</fullName>
                </value>
                <value>
                    <fullName>Registry</fullName>
                </value>
                <value>
                    <fullName>Securitised Products</fullName>
                </value>
                <value>
                    <fullName>Securitised Products Viewer</fullName>
                </value>
                <value>
                    <fullName>Submission Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>SFDC1-6785 Source of the licence data</description>
        <inlineHelpText>Data can be uploaded automatically from external entitlement and authentications systems or entered manually</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>UserXS</fullName>
                </value>
                <value>
                    <fullName>MSF</fullName>
                </value>
                <value>
                    <fullName>USERXS-MARKIT</fullName>
                </value>
                <value>
                    <fullName>USERXS-TRADE-MANAGER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>SFDC1-6785 Initial set-up date of the license in the external source system</description>
        <inlineHelpText>Initial set-up date of the license in the external source system</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>SFDC1-6785 UserXS License token</description>
        <inlineHelpText>UserXS System License token. Used in customer service portal.</inlineHelpText>
        <label>Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueLicenseID__c</fullName>
        <description>SFDC1-6785 Unique Identifier of the license</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID is normally provided by the external source system, if it is not provided, it is populated automatically</inlineHelpText>
        <label>Unique License ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product License</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>